<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Homework 3</string>
    <string name="action_settings">Settings</string>
    <string name="addhomework">Add</string>
    <string name="title_activity_homework_detail">HomeworkDetail</string>
    <string name="hello_world">Hello world!</string>
    <string name="homework_title">Title</string>
    <string name="colon">:</string>
    <string name="homework_completed">Completed</string>
    <string name="no">No</string>
    <string name="date_due">Date Due</string>
    <string name="remind_date">Remind Date</string>
    <string name="homework_detail">Homework Detail</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="notes">Notes</string>
    <string name="dummy_title">Dummy</string>
    <string name="title_activity_homework_detail_edit">HomeworkDetailEditActivity</string>
    <string name="finish">Finish</string>

</resources>
